food-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-deployment
  namespace: food-test
  labels:
    app: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food
  template:
    metadata:
      labels:
        app: food
    spec:
      containers:
      - name: food
        image: node:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
        # Probar que está respondiendo el pod
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        # Probar que el pod está vivo
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
