food-service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "food-deployment-service"
  namespace: "food-test"
  labels:
    app: "food"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3000
  selector:
    app: "food"
  type: "NodePort"
