food-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-ingress
  namespace: food-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "gce"
    # seteamos balanceo por rate
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  #tls:
  #- hosts:
  #  - api-dev.rhinox.io
  #  secretName: dev-rhino-secret
  rules:
  - host: store-test.rhinox.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: food-deployment-service
            port:
              number: 80
  defaultBackend:
    service:
      name: food-deployment-service
      port:
        number: 80
